Resume Page Update
Customized the resume page to reflect my personal style by adding real information about myself and making aesthetic improvements to enhance its overall appearance.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Andrei Eremia - Resume</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaqueries.css">
 
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-            <img src="./assets/profile-pic.png" alt="Andrei Eremia profile picture">
+            <img src="./assets/profile-pic.jpeg" alt="Andrei Eremia profile picture" id="profile-pic">
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
@@ -69,7 +69,7 @@
                     <div class="details-container">
                         <img src="./assets/experience.png" alt="Experience Icon" class="icon">
                         <h3>Experience</h3>
-                        <p>2+ years <br> Frontend Development</p>
+                        <p>2+ years <br> Academic Software Development</p>
                     </div>
                     <div class="details-container">
                         <img src="./assets/education.png" alt="Education Icon" class="icon">
@@ -78,7 +78,7 @@
                     </div>
                 </div>
                 <div class="text-container">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo eos repellendus, provident hic eaque maxime consequatur numquam nihil, officia magnam, autem aliquid rerum? Eius, labore ex reprehenderit voluptatem repudiandae non velit, perspiciatis nesciunt nulla veniam fugit, quaerat corrupti doloribus aliquid itaque obcaecati eligendi! Omnis, ipsa maiores deleniti cum quis repudiandae.</p>
+                    <p>👨🏻‍💻 I am a creative and dedicated individual with a passion for continuous learning and skill development. I chose to study Computer Science because I believe programming is a powerful skill, enabling us to understand how technology functions around the world. In my spare time, I stay informed about new technological advancements and I am enthusiastic about what the future holds in this field.</p>
                 </div>
             </div>
         </div>
@@ -90,81 +90,115 @@
         <div class="experience-details-container">
             <div class="about-containers">
                 <div class="details-container">
-                    <h2 class="experience-sub-title">Frontend Development</h2>
+                    <h2 class="experience-sub-title">Hard Skills</h2>
                     <div class="article-container">
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
                             <div>
-                                <h3>HTML</h3>
-                                <p>Experienced</p>
+                                <h4>HTML</h4>
+                                <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
                             <div>
-                                <h3>CSS</h3>
-                                <p>Experienced</p>
+                                <h4>CSS / Bootstrap</h4>
+                                <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
                             <div>
-                                <h3>SASS</h3>
-                                <p>Experienced</p>
+                                <h4>JavaScript / jQuery</h4>
+                                <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
                             <div>
-                                <h3>JavaScript</h3>
-                                <p>Experienced</p>
+                                <h4>Java</h4>
+                                <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
                             <div>
-                                <h3>TypeScript</h3>
-                                <p>Experienced</p>
+                                <h4>C /C++/ C#</h4>
+                                <p>Familiar</p>
                             </div>
                         </article>
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
                             <div>
-                                <h3>Material UI</h3>
-                                <p>Experience</p>
+                                <h4>PHP</h4>
+                                <p>Familiar</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                            <div>
+                                <h4>MySQL</h4>
+                                <p>Familiar</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                            <div>
+                                <h4>Python</h4>
+                                <p>Familiar</p>
                             </div>
                         </article>
                     </div>
                 </div>
                 <div class="details-container">
-                    <h2 class="experience-sub-title">Backend Development</h2>
+                    <h2 class="experience-sub-title">Soft Skills</h2>
                     <div class="article-container">
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
                             <div>
-                                <h3>SQL</h3>
-                                <p>Experienced</p>
+                                <h4>Fast Learner</h4>
                             </div>
                         </article>
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
                             <div>
-                                <h3>NodeJS</h3>
-                                <p>Experienced</p>
+                                <h4>Active Learner</h4>
                             </div>
                         </article>
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
                             <div>
-                                <h3>Express JS</h3>
-                                <p>Experienced</p>
+                                <h4>Creative</h4>
                             </div>
                         </article>
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
                             <div>
-                                <h3>Git</h3>
-                                <p>Experienced</p>
+                                <h4>Curious</h4>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                            <div>
+                                <h4>Serious</h4>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                            <div>
+                                <h4>"Workaholic</h4>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                            <div>
+                                <h4>Team Worker</h4>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                            <div>
+                                <h4>Communicative</h4>
                             </div>
                         </article>
                     </div>
@@ -180,7 +214,7 @@
             <div class="about-containers">
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/project-1.png" alt="Project 1" class="project-img">
+                        <img src="./assets/still-in-progress.png" alt="Project 1" class="project-img">
                     </div>
                     <h2 class="experience-sub-title project-title">Project One</h2>
                     <div class="btn-container">
@@ -191,7 +225,7 @@
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/project-2.png" alt="Project 2" class="project-img">
+                        <img src="./assets/still-in-progress.png" alt="Project 2" class="project-img">
                     </div>
                     <h2 class="experience-sub-title project-title">Project Two</h2>
                     <div class="btn-container">
@@ -202,7 +236,7 @@
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/project-3.png" alt="Project 3" class="project-img">
+                        <img src="./assets/still-in-progress.png" alt="Project 3" class="project-img">
                     </div>
                     <h2 class="experience-sub-title project-title">Project Three</h2>
                     <div class="btn-container">
