--- a/index.html
+++ b/index.html
@@ -214,41 +214,58 @@
             <div class="about-containers">
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/still-in-progress.png" alt="Project 1" class="project-img">
+                    <img src="./assets/smashly.png" alt="Project 1" class="project-img" />
                     </div>
-                    <h2 class="experience-sub-title project-title">Project One</h2>
+                    <h2 class="experience-sub-title project-title">Restaurant Ordering App</h2>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Github</button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live Demo</button>
-
+                    <a class="btn btn-color-2 project-btn"
+                        href="https://github.com/AndreiEremia02/restaurant-ordering-system"
+                        target="_blank" rel="noopener noreferrer">Github</a>
+                    <a class="btn btn-color-2 project-btn"
+                        href="https://smashly.netlify.app/home?tableNumber=1"
+                        target="_blank" rel="noopener noreferrer">Live Demo</a>
                     </div>
                 </div>
+
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/still-in-progress.png" alt="Project 2" class="project-img">
+                    <img src="./assets/bos1.jpg" alt="Project 2" class="project-img" />
                     </div>
-                    <h2 class="experience-sub-title project-title">Project Two</h2>
+                    <h2 class="experience-sub-title project-title">Job Listing &<br>Search Platform</h2>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Github</button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live Demo</button>
-
+                    <button class="btn btn-color-2 project-btn" onclick="event.preventDefault()" disabled>
+                        <s>Github</s>
+                    </button>
+                    <button class="btn btn-color-2 project-btn" onclick="event.preventDefault()" disabled>
+                        <s>Live Demo</s>
+                    </button>
                     </div>
                 </div>
+
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/still-in-progress.png" alt="Project 3" class="project-img">
+                    <img src="./assets/bos2.jpg" alt="Project 3" class="project-img" />
                     </div>
-                    <h2 class="experience-sub-title project-title">Project Three</h2>
+                    <h2 class="experience-sub-title project-title">Ticketing<br>App</h2>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Github</button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live Demo</button>
-
+                    <button class="btn btn-color-2 project-btn" onclick="event.preventDefault()" disabled>
+                        <s>Github</s>
+                    </button>
+                    <button class="btn btn-color-2 project-btn" onclick="event.preventDefault()" disabled>
+                        <s>Live Demo</s>
+                    </button>
                     </div>
                 </div>
             </div>
         </div>
-        <img src="./assets/arrow.png" alt="Arrow Icon" class="icon arrow" onclick="location.href='./#contact'">
+        <img src="./assets/arrow.png" alt="Arrow Icon" class="icon arrow" onclick="location.href='./#contact'" />
     </section>
+
+    <div id="image-popup" class="popup-overlay" onclick="closePopup(event)">
+        <span class="close-popup" onclick="closePopup(event)">&times;</span>
+        <img id="popup-image" class="popup-image" src="" alt="Preview">
+    </div>
+
     <section id="contact">
         <p class="section__text__p1">Get in Touch</p>
         <h1 class="title"> Contact Me</h1>
