--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="details-container">
                         <img src="./assets/education.png" alt="Education Icon" class="icon">
                         <h3>Education</h3>
-                        <p>B.Sc Bachelors Degree <br> Highschool Diploma</p>
+                        <p> Master's Degree (Applied Data Analytics) <br> Bachelor's Degree (Informatics Economics) <br> Highschool Diploma</p>
                     </div>
                 </div>
                 <div class="text-container">
